--- a/simplepin/Base.lproj/LaunchScreen.storyboard
+++ b/simplepin/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
@@ -16,18 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="art_pin" translatesAutoresizingMaskIntoConstraints="NO" id="jhr-ky-0xA">
-                                <rect key="frame" x="264" y="264" width="72" height="72"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="0IS-b4-lCp"/>
-                                    <constraint firstAttribute="width" constant="72" id="ZWU-ok-08B"/>
-                                </constraints>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="art_pin" translatesAutoresizingMaskIntoConstraints="NO" id="9jV-n8-F7N">
+                                <rect key="frame" x="276" y="276" width="48" height="48"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jhr-ky-0xA" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="GA3-yX-kb5"/>
-                            <constraint firstItem="jhr-ky-0xA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="aqw-Xb-EOU"/>
+                            <constraint firstItem="9jV-n8-F7N" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="a92-73-7Yy"/>
+                            <constraint firstItem="9jV-n8-F7N" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="q6z-DE-9Gs"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -37,6 +33,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="art_pin" width="72" height="72"/>
+        <image name="art_pin" width="48" height="48"/>
     </resources>
 </document>
